--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,9 +7,9 @@ advanced_options=false
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.csv, Databases/skills.csv, .*atlas, ,*.json, *.spine-json"
 exclude_filter=""
-export_path="../../Godot Export/64-bit/Delivery Knight/Delivery Knight.exe"
+export_path="../../Godot Export/64-bit/Delivery Girl/Delivery Girl.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
